[ios] Checks if section exists on RecentTabs session deletion

Bug: 871200
Cq-Include-Trybots: luci.chromium.try:ios-simulator-full-configs;master.tryserver.chromium.mac:ios-simulator-cronet
Change-Id: I73ec397b9fcc9d243766753e2251ba261c443022
Reviewed-on: https://chromium-review.googlesource.com/1164256
Reviewed-by: edchin <edchin@chromium.org>
Commit-Queue: Sergio Collazos <sczs@chromium.org>
Cr-Commit-Position: refs/heads/master@{#581620}
Former-commit-id: c097daf8d38417cffe8e1104f712f37072caff46